# DebbieDoesMobile

./: .gitignore  .gitmodules  README.md
Freenove_Media_Kit_for_ESP32-S3-main/: README.md
Freenove_Media_Kit_for_ESP32-S3-main/3D_Models/: Readme.txt
Freenove_Media_Kit_for_ESP32-S3-main/Libraries/TFT_eSPI_Setups/: User_Setup_Select.h
Freenove_Media_Kit_for_ESP32-S3-main/Sketches/Sketch_03_2_Button/: Sketch_03_2_Button.ino  (+1 more)
companion-server/: .env.example  README.md  agent_bridge.js  email_monitor.js  memory_store.js  network_tools.js  package-lock.json  package.json  server.js  spotify.js  whatsapp.js
docs/: BLUETOOTH_AUDIO_MIGRATION.md  DEVICE_BRINGUP_AND_TROUBLESHOOTING.md  EXTERNAL_API.postman_collection.json  EXTERNAL_API_HANDOFF.md  FUNCTION_INDEX.md
external-api-handoff/: EXTERNAL_API.postman_collection.json  EXTERNAL_API.postman_environment.json  EXTERNAL_API_HANDOFF.md  README.md
firmware/: CMakeLists.txt  build_output.txt  partitions.csv  sdkconfig.defaults  sdkconfig.old
firmware/main/: CMakeLists.txt  audio_manager.c  audio_manager.h  bluetooth_manager.c  bluetooth_manager.h  camera_manager.c  camera_manager.h  debbie.h  display_manager.c  display_manager.h  idf_component.yml  main.c  memory_manager.c  memory_manager.h  network_scanner.c  network_scanner.h  notification_client.c  notification_client.h  openai_client.c  openai_client.h  self_agent.c  self_agent.h  settings.h  storage_manager.c  storage_manager.h  vuln_reporter.c  vuln_reporter.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
firmware/scripts/: read_serial.py
(+84 files in other folders)
